Align button and solve create private recipe bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -149,3 +149,22 @@ tr:nth-child(even) {
   justify-content: space-between;
   width: 100%;
 }
+
+.add-food-btn-container {
+  width: 90vw;
+  display: flex;
+  justify-content: end;
+  padding: 2rem 0;
+}
+
+.add-food-btn {
+  border: solid 2px #000;
+  width: 10rem;
+  padding: 0.5rem 0;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+}
